test_files/should_pass/minimal.wpdoc
{
  "version": 1,
  "text": "Hello"
}
