test_files/should_fail/malformed_json.wpdoc
{
  "version": 1,
  "text": "This JSON is malformed
  "style": { "bold": true }
}
